add contact info

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@ This is the admin creating an index.html file for tom and jerry
 
 This is Tom adding navigation to the Ai website
 
+this is the contact information from jerry. you can reach me at 08162341175
